nori-rs/tui-components/src/picker/snapshots/codex_tui_components__picker__tests__multi_picker_selection_snapshot.snap
---
source: tui-components/src/picker/tests.rs
expression: "snapshot(&state, 86, 13)"
---
"┌ Resume a session ──────────────────────────────────────────────────────────────────┐"
"│Search ACP sessions or start fresh                  │ Details                       │"
"│All  Local  Cloud                                   │Agent: Codex                   │"
"│/ Title, project, or session id                     │Waiting for user input.        │"
"│  Session                     Project     Updated   │                               │"
"│○ Start a new session         —           now       │                               │"
"│● Fix parser recovery (curr…  nori-cli    2m ago    │                               │"
"│● Improve Markdown tables     codex       18m ago   │                               │"
"│○ Legacy unavailable session  handroll    3d ago    │                               │"
"│                                                    │                               │"
"│                                                    │                               │"
"│↑↓ move  enter toggle  esc close                    │                               │"
"└────────────────────────────────────────────────────────────────────────────────────┘"
