nori-rs/tui-components/src/picker/snapshots/codex_tui_components__picker__tests__picker_loading.snap
---
source: tui-components/src/picker/tests.rs
expression: "snapshot(&state, 62, 10)"
---
"                                                              "
"  Resume a session                                            "
"  Search ACP sessions or start fresh                          "
"  All  Local  Cloud                                           "
"  ⌕  Title, project, or session id                            "
"  ◌ Loading sessions…                                         "
"    Results will appear without rebuilding the picker.        "
"                                                              "
"               ↑↓ move  enter select  esc close               "
"                                                              "
